--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   table_calendar: ^3.0.9
-  font_awesome_flutter: ^10.3.0
+  font_awesome_flutter: ^10.6.0
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  provider: ^6.1.1
+  firebase_ui_auth: ^1.11.0
+  google_sign_in: ^6.2.1
+  flutter_otp_text_field: ^1.1.1
+  otp_text_field: ^1.1.3
+  flutter_secure_storage: ^9.0.0
+  firebase_messaging: ^14.7.15
 
 
 dev_dependencies:
